--- a/Python init.ipynb
+++ b/Python init.ipynb
@@ -81,8 +81,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T10:33:59.020242Z",
-     "start_time": "2024-10-03T10:33:59.014257Z"
+     "end_time": "2024-10-03T12:54:06.265219Z",
+     "start_time": "2024-10-03T12:54:06.244889Z"
     }
    },
    "cell_type": "code",
@@ -91,7 +91,7 @@
     "import os\n",
     "\n",
     "def extract_database(file_path):\n",
-    "    with open(os.path.join(dataset_path, file_path), \"r\") as file:\n",
+    "    with open(os.path.join(dataset_path, file_path), \"r\", encoding=\"utf-8\") as file:\n",
     "        data = json.load(file)\n",
     "        databases = {}\n",
     "        for line in data:\n",
@@ -103,7 +103,7 @@
     "\n",
     "def write_database(databases, file_path):\n",
     "    for db_id, lines in databases.items():\n",
-    "        with open(os.path.join(database_path, db_id, file_path), \"w\") as file:\n",
+    "        with open(os.path.join(database_path, db_id, file_path), \"w\", encoding=\"utf-8\") as file:\n",
     "            json.dump(lines, file)\n",
     "            \n",
     "def extract_and_write_database(file_path):\n",
@@ -117,29 +117,20 @@
    ],
    "id": "2236ea5f0d926c49",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 44
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-03T10:34:03.203995Z",
-     "start_time": "2024-10-03T10:34:00.852727Z"
+     "end_time": "2024-10-03T12:54:10.579256Z",
+     "start_time": "2024-10-03T12:54:08.411944Z"
     }
    },
    "cell_type": "code",
    "source": "extract_all_databases()",
    "id": "be8f20d7dc599a1c",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'db_id': 'concert_singer', 'query': 'SELECT count(*) FROM singer', 'query_toks': ['SELECT', 'count', '(', '*', ')', 'FROM', 'singer'], 'query_toks_no_value': ['select', 'count', '(', '*', ')', 'from', 'singer'], 'question': 'Combien de chanteurs avons-nous?', 'sql': {'from': {'table_units': [['table_unit', 1]], 'conds': []}, 'select': [False, [[3, [0, [0, 0, False], None]]]], 'where': [], 'groupBy': [], 'having': [], 'orderBy': [], 'limit': None, 'intersect': None, 'union': None, 'except': None}}\n",
-      "{'db_id': 'department_management', 'query': 'SELECT count(*) FROM head WHERE age  >  56', 'query_toks': ['SELECT', 'count', '(', '*', ')', 'FROM', 'head', 'WHERE', 'age', '>', '56'], 'query_toks_no_value': ['select', 'count', '(', '*', ')', 'from', 'head', 'where', 'age', '>', 'value'], 'question': 'Combien de chefs de dÃ©partement ont plus de 56 ans?', 'sql': {'from': {'table_units': [['table_unit', 1]], 'conds': []}, 'select': [False, [[3, [0, [0, 0, False], None]]]], 'where': [[False, 3, [0, [0, 10, False], None], 56.0, None]], 'groupBy': [], 'having': [], 'orderBy': [], 'limit': None, 'intersect': None, 'union': None, 'except': None}}\n"
-     ]
-    }
-   ],
-   "execution_count": 21
+   "outputs": [],
+   "execution_count": 45
   },
   {
    "metadata": {
